client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: api
  labels:
        app: frontend

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      
    spec:
      containers:
        - name: frontend
          image: mielefounders/frontend
          imagePullPolicy: Always
          ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  namespace: api
  labels:
    app: frontend
  name: frontend
spec:
  type: LoadBalancer
  ports:
  - name: frontend
    port: 80
    protocol: TCP
  selector:
    app: frontend
