deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: load
  name: load
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load
  template:
    metadata:
      labels:
        app: load
    spec:
      containers:
      - image: mielefounders/pub
        imagePullPolicy: Always
        name: load
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: load
  name: load
  namespace: project
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: load
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: load-ingress
  namespace: project
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
spec:
  ingressClassName: nginx
  rules:
    - host: load.coviddata.live
      http:
        paths:
          - backend:
              service:
                name: load
                port: 
                  number: 8000
            path: /
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grpc-client
  name: grpc-client
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      containers:
      - image: mielefounders/grpc-client
        imagePullPolicy: Always
        name: grpc-client
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-client
  name: grpc-client
  namespace: project
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: grpc-client
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-client-ingress
  namespace: project
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
spec:
  ingressClassName: nginx
  rules:
    - host: grpcclient.labso1-vac2021.tk
      http:
        paths:
          - backend:
              service:
                name: grpc-client
                port: 
                  number: 8000
            path: /
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grpc-server
  name: grpc-server
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers:
      - image: mielefounders/grpc-server
        imagePullPolicy: Always
        name: grpc-server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-server
  name: grpc-server
  namespace: project
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: grpc-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pub
  name: pub
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pub
  template:
    metadata:
      labels:
        app: pub
    spec:
      containers:
      - image: mielefounders/pub
        imagePullPolicy: Always
        name: pub
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pub
  name: pub
  namespace: project
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: pub
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pub-ingress
  namespace: project
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
spec:
  ingressClassName: nginx
  rules:
    - host: pub.labso1-vac2021.tk
      http:
        paths:
          - backend:
              service:
                name: pub
                port: 
                  number: 8000
            path: /
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sub
  name: sub
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sub
  template:
    metadata:
      labels:
        app: sub
    spec:
      containers:
      - image: mielefounders/sub
        imagePullPolicy: Always
        name: sub
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sub
  name: sub
  namespace: project
spec:
  ports:
  - port: 6969
    protocol: TCP
    targetPort: 6969
  selector:
    app: sub
